📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9534,5 +9534,189 @@
         "published": "Fri, 12 Dec 2025 00:04:29 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46239177\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/world-launches-its-super-app-including-crypto-pay-and-encrypted-chat-features/",
+        "title": "World launches its \u2018super app,\u2019 including crypto pay and encrypted chat features",
+        "link": "https://techcrunch.com/2025/12/11/world-launches-its-super-app-including-crypto-pay-and-encrypted-chat-features/",
+        "published": "Fri, 12 Dec 2025 01:40:54 +0000",
+        "source": "TechCrunch",
+        "summary": "Tools for Humanity, the company behind the app, is seeking to expand its \"real human network.\""
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/stanfords-star-reporter-takes-on-silicon-valleys-money-soaked-startup-culture/",
+        "title": "Stanford\u2019s star reporter takes on Silicon Valley\u2019s \u2018money-soaked\u2019 startup culture",
+        "link": "https://techcrunch.com/2025/12/11/stanfords-star-reporter-takes-on-silicon-valleys-money-soaked-startup-culture/",
+        "published": "Fri, 12 Dec 2025 00:52:20 +0000",
+        "source": "TechCrunch",
+        "summary": "His reporting on a Stanford University president put Theo Baker on the map, but his upcoming book may cement his reputation as the rare young journalist willing to challenge Silicon Valley's startup machine."
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/841950/control-resonant-sequel-announce-ps5-xbox-steam",
+        "title": "Control\u2019s action-RPG sequel launches in 2026",
+        "link": "https://www.theverge.com/entertainment/841950/control-resonant-sequel-announce-ps5-xbox-steam",
+        "published": "2025-12-11T21:05:26-05:00",
+        "source": "The Verge",
+        "summary": "Remedy Entertainment is finally showing off the much-anticipated sequel to Control. The new game, dubbed Control Resonant, expands on the original with a new action-RPG framework. It takes place seven years later and shifts the setting from the unsettling Oldest House of the original to a more open Manhattan, while putting players in the role [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/games/843188/star-wars-fate-of-the-old-republic-casey-hudson",
+        "title": "The next Star Wars game is the spiritual successor to Knights of the Old Republic",
+        "link": "https://www.theverge.com/games/843188/star-wars-fate-of-the-old-republic-casey-hudson",
+        "published": "2025-12-11T20:48:01-05:00",
+        "source": "The Verge",
+        "summary": "The next Star Wars game is coming from the director of Mass Effect and Knights of the Old Republic. Star Wars: Fate of the Old Republic was revealed during The Game Awards with a brief trailer that got Geoff Keighley so excited his voice started cracking. Like any announcement trailer, it was brief, featuring a [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/ai-artificial-intelligence/841817/trump-signs-ai-executive-order-pushing-to-ban-state-laws",
+        "title": "Trump signs AI executive order pushing to ban state laws",
+        "link": "https://www.theverge.com/ai-artificial-intelligence/841817/trump-signs-ai-executive-order-pushing-to-ban-state-laws",
+        "published": "2025-12-11T20:18:46-05:00",
+        "source": "The Verge",
+        "summary": "On Thursday evening, with White House AI and crypto czar David Sacks looking over his shoulder, Donald Trump signed an executive order aiming to grab unilateral power over regulating artificial intelligence for the federal government. The order can't by itself unilaterally override state AI laws, but it directs federal agencies to take steps to reduce [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/trump-signs-executive-order-ai-state-laws/",
+        "title": "Trump Signs Executive Order That Threatens to Punish States for Passing AI Laws",
+        "link": "https://www.wired.com/story/trump-signs-executive-order-ai-state-laws/",
+        "published": "Fri, 12 Dec 2025 00:54:47 +0000",
+        "source": "WIRED",
+        "summary": "The order creates a Justice Department task force to challenge state AI laws and directs the Commerce Department to pull future broadband funding from states that pass \u201conerous\u201d legislation."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/south-of-midnight-is-coming-to-ps5-and-switch-2-next-spring-022725892.html?src=rss",
+        "title": "South of Midnight is coming to PS5 and Switch 2 next spring",
+        "link": "https://www.engadget.com/gaming/south-of-midnight-is-coming-to-ps5-and-switch-2-next-spring-022725892.html?src=rss",
+        "published": "Fri, 12 Dec 2025 02:27:25 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/gaming/xbox/south-of-midnight-preview-stopped-motion-160003119.html\" target=\"_blank\"><em>South of Midnight</em></a><em> </em>is heading to PlayStation 5 and Switch 2 in Spring 2026, developer Compulsion Games <a class=\"link\" href=\"https://x.com/compulsiongames/status/1999265661600645401\" target=\"_blank\">announced</a> <a class=\"link\" href=\"https://x.com/CompulsionGames/status/1999265189204754913\" target=\"_blank\">on X</a>. The third-person action-a"
+    },
+    {
+        "id": "https://www.engadget.com/ai/trump-orders-creation-of-litigation-task-force-to-challenge-state-ai-laws-022657022.html?src=rss",
+        "title": "Trump orders creation of litigation task force to challenge state AI laws",
+        "link": "https://www.engadget.com/ai/trump-orders-creation-of-litigation-task-force-to-challenge-state-ai-laws-022657022.html?src=rss",
+        "published": "Fri, 12 Dec 2025 02:26:57 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>On Thursday evening, President Donald Trump <a class=\"link\" href=\"https://www.whitehouse.gov/presidential-actions/2025/12/eliminating-state-law-obstruction-of-national-artificial-intelligence-policy/\" target=\"_blank\">signed an executive order</a> calling for a single, nationwide regulatory framework governing artificial intelligence at the expense of the ability of different states to regulate the nascent technology. \u201cTo win, United States AI companies must be free to innovate without cumbers"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/the-devs-of-soma-are-back-with-a-spiritual-successor-called-ontos-021535060.html?src=rss",
+        "title": "The devs of SOMA are back with a spiritual successor called Ontos",
+        "link": "https://www.engadget.com/gaming/the-devs-of-soma-are-back-with-a-spiritual-successor-called-ontos-021535060.html?src=rss",
+        "published": "Fri, 12 Dec 2025 02:15:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div><div style=\"width: 100%; height: 0; padding-bottom: 56.25%;\"></div></div><p>Frictional Games is back with a new game that looks primed to carry on the studio's tradition of excellence in horror. It's called <em>Ontos</em>, and it's slated to launch on PC, PlayStation and Xbox next year. The trailer debuted during The Game Awards 2025.</p><p>The company's past projects include <em>Amnesia: The Dark Descent</em> and <em>SOMA</em>, and this new title is also looking pretty dang creepy. It look"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/control-resonant-steps-into-a-larger-world-thats-inspired-by-neon-genesis-evangelion-021310781.html?src=rss",
+        "title": "Control Resonant steps into a larger world that's inspired by Neon Genesis Evangelion",
+        "link": "https://www.engadget.com/gaming/control-resonant-steps-into-a-larger-world-thats-inspired-by-neon-genesis-evangelion-021310781.html?src=rss",
+        "published": "Fri, 12 Dec 2025 02:13:10 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Remedy Entertainment's <em>Control </em>is a bizarre yet totally captivating action game that feels like <em>Die Hard</em> by way of David Lynch. In<em>Control: Resonant</em>, players step into the role of the original game's most enigmatic and unsettling characters for their own jaunt through a 'new-weird' world outside The Oldest House.</p><p>Just ahead of the reveal at The Game Awards, we got an early look at <em>Control: Resonant</em>, the next game in the Remedy Connected Universe. Along"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/larian-studios-is-returning-to-the-divinity-series-with-divinity-015833088.html?src=rss",
+        "title": "Larian Studios is returning to the Divinity series with... Divinity",
+        "link": "https://www.engadget.com/gaming/larian-studios-is-returning-to-the-divinity-series-with-divinity-015833088.html?src=rss",
+        "published": "Fri, 12 Dec 2025 01:58:33 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div></div><p>Larian Studios didn\u2019t rest on its laurels for long. Two years after <a class=\"link\" href=\"https://www.engadget.com/baldurs-gate-3-is-available-now-on-xbox-series-xs-040406055.html\" target=\"_blank\">taking home the Game of the Year prize</a> for <em>Baldur\u2019s Gate III</em> at The Game Awards, the developer popped up again at the 2025 edition of the ceremony to announce its upcoming project, which is the next entry in the Divinity series. Simply called <em>Divinity</em>, this will be t"
+    },
+    {
+        "id": "https://gizmodo.com/street-fighter-movie-trailer-2026-2000698804",
+        "title": "The First Trailer for the New \u2018Street Fighter\u2019 Movie Really Looks Like That",
+        "link": "https://gizmodo.com/street-fighter-movie-trailer-2026-2000698804",
+        "published": "Fri, 12 Dec 2025 02:29:52 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Street Fighter Movie 2026 Guile\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/street-fighter-movie-2026-guile.jpg\" width=\"1920\" /><br /><br />Director Kitao Sakurai's 'Street Fighter' movie kicks its way into theaters in 2026."
+    },
+    {
+        "id": "https://gizmodo.com/star-wars-fate-of-the-old-republic-announcement-trailer-game-awards-2000698818",
+        "title": "The Old Republic Returns to \u2018Star Wars\u2019 Video Games",
+        "link": "https://gizmodo.com/star-wars-fate-of-the-old-republic-announcement-trailer-game-awards-2000698818",
+        "published": "Fri, 12 Dec 2025 01:20:54 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Star Wars Fate Of The Old Republic\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/star-wars-fate-of-the-old-republic.jpg\" width=\"1920\" /><br /><br />Expected to see the 'Knights of the Old Republic' remake at the Game Awards tonight? Too bad: have a *brand new* game instead."
+    },
+    {
+        "id": "https://mashable.com/article/trump-signs-ai-executive-order",
+        "title": "Trump signs AI executive order, aims to stop state laws",
+        "link": "https://mashable.com/article/trump-signs-ai-executive-order",
+        "published": "Fri, 12 Dec 2025 01:37:49 +0000",
+        "source": "Mashable",
+        "summary": "The order creates a task force that will challenge existing state AI laws."
+    },
+    {
+        "id": "https://mashable.com/article/how-to-watch-die-my-love",
+        "title": "How to watch Die My Love: Stream Jennifer Lawrence and Robert Pattinsons feral love story at home",
+        "link": "https://mashable.com/article/how-to-watch-die-my-love",
+        "published": "Fri, 12 Dec 2025 01:10:15 +0000",
+        "source": "Mashable",
+        "summary": "When will 'Die My Love' be streaming?  Here's everything you need to know to watch the Jennifer Lawrence and Robert Pattinson film at home."
+    },
+    {
+        "id": "https://mashable.com/article/amazon-the-game-awards-prime-member-deals",
+        "title": "Calling all gamers: Prime members can score exclusive deals thanks to The Game Awards \u2014 but only for 24 hours",
+        "link": "https://mashable.com/article/amazon-the-game-awards-prime-member-deals",
+        "published": "Fri, 12 Dec 2025 01:00:00 +0000",
+        "source": "Mashable",
+        "summary": "On Dec. 11 at 5 p.m. PT, Amazon is launching major savings during The Game Awards. For 24 hours, shop savings on nominated games like 'Split Fiction', 'Sonic Racing: Crossworlds', and 'Elden Ring Nightreign'."
+    },
+    {
+        "id": "https://mashable.com/article/openai-gpt-5-2-vs-google-gemini-3-how-they-compare",
+        "title": "GPT-5.2 vs Gemini 3 \u2014 How the two heavyweight models compare on benchmarks, price, and feature set",
+        "link": "https://mashable.com/article/openai-gpt-5-2-vs-google-gemini-3-how-they-compare",
+        "published": "Fri, 12 Dec 2025 00:23:55 +0000",
+        "source": "Mashable",
+        "summary": "The AI race between OpenAI and Google is heating up with the release of GPT-5.2. How does it compare to Gemini 3?"
+    },
+    {
+        "id": "https://readwrite.com/honolulu-police-shut-down-illegal-gambling-operation-seizing-machines/",
+        "title": "Honolulu police shut down illegal gambling operation, seizing cash and machines",
+        "link": "https://readwrite.com/honolulu-police-shut-down-illegal-gambling-operation-seizing-machines/",
+        "published": "Thu, 11 Dec 2025 16:22:01 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Building in Honolulu, with cars parked outside and a pink scooter. Image shared by police, with Honolulu Police Department badge in the corner. Honolulu police shut down illegal gambling operation, seizing cash and machines\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ATS-19-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The Honolulu Police Department has take"
+    },
+    {
+        "id": "https://readwrite.com/australian-acma-blocks-12-illegal-gambling-websites/",
+        "title": "Australian ACMA blocks 12 illegal gambling websites",
+        "link": "https://readwrite.com/australian-acma-blocks-12-illegal-gambling-websites/",
+        "published": "Thu, 11 Dec 2025 15:16:05 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Close-up of someone holding a mobile with a casino website open on the screen. Over the image is text saying &#039;ACMA update&#039; in white. Australian ACMA blocks 12 illegal gambling websites\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ATS-17-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The Australian Communications and Media Authority (ACMA) has request"
+    },
+    {
+        "id": "https://www.zdnet.com/article/roborock-saros-z70-review/",
+        "title": "This viral Roborock vacuum with a mechanical arm is $500 off on Amazon right now",
+        "link": "https://www.zdnet.com/article/roborock-saros-z70-review/",
+        "published": "Fri, 12 Dec 2025 02:25:00 GMT",
+        "source": "Latest news",
+        "summary": "The Roborock Saros Z70 offers a sneak peek at what smart homes might look like in the near future."
+    },
+    {
+        "id": "https://www.zdnet.com/article/dell-16-premium-review/",
+        "title": "Upgrading your Windows laptop? This Dell checks all the right boxes for me",
+        "link": "https://www.zdnet.com/article/dell-16-premium-review/",
+        "published": "Fri, 12 Dec 2025 02:00:58 GMT",
+        "source": "Latest news",
+        "summary": "The Dell 16 Premium extends the XPS legacy, combining high-end components with a striking 4K in a sleek design."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-project-success-data-foundation-storytelling-artificial-intelligence/",
+        "title": "This company's AI success was built on 5 essential steps - see how they work for you",
+        "link": "https://www.zdnet.com/article/ai-project-success-data-foundation-storytelling-artificial-intelligence/",
+        "published": "Fri, 12 Dec 2025 02:00:40 GMT",
+        "source": "Latest news",
+        "summary": "From data foundations to storytelling techniques, here's how to turn your AI projects into valuable production services."
+    },
+    {
+        "id": "https://www.zdnet.com/article/acer-aspire-16-review/",
+        "title": "Finally, a Windows laptop that I wouldn't mind traveling for work with (and priced well)",
+        "link": "https://www.zdnet.com/article/acer-aspire-16-review/",
+        "published": "Fri, 12 Dec 2025 01:30:38 GMT",
+        "source": "Latest news",
+        "summary": "The latest Acer Aspire 16 delivers solid performance and long-lasting battery life - a recipe for success."
     }
 ]
