📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9718,5 +9718,125 @@
         "published": "Fri, 12 Dec 2025 01:30:38 GMT",
         "source": "Latest news",
         "summary": "The latest Acer Aspire 16 delivers solid performance and long-lasting battery life - a recipe for success."
+    },
+    {
+        "id": "https://www.theverge.com/games/843260/tomb-raider-catalyst-trailer-tomb-raider-atlantis",
+        "title": "Tomb Raider announces two new games",
+        "link": "https://www.theverge.com/games/843260/tomb-raider-catalyst-trailer-tomb-raider-atlantis",
+        "published": "2025-12-11T22:11:15-05:00",
+        "source": "The Verge",
+        "summary": "While Geoff Keighley had already announced that Tomb Raider would be making a Game Awards appearance, the surprise was that instead of one game announcement there's two. Crystal Dynamics and Amazon Game Studios are releasing two Tomb Raider games back-to-back in 2026 and 2027. First up, coming in 2026 is Tomb Raider: Legacy of Atlantis. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/802969/best-gifts-under-50-2025",
+        "title": "The best Christmas gifts we love under $50",
+        "link": "https://www.theverge.com/gadgets/802969/best-gifts-under-50-2025",
+        "published": "2025-12-11T21:50:15-05:00",
+        "source": "The Verge",
+        "summary": "One of the easiest things to do during the holidays is spend too much money. It happens to many of us, even when we swear that things are going to be different this year. We want to help you stay true to your intentions to save money when possible, and we're doing that with a [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/843265/apple-epic-games-tim-sweeney-interview",
+        "title": "Tim Sweeney on the future of Fortnite after another win over Apple",
+        "link": "https://www.theverge.com/news/843265/apple-epic-games-tim-sweeney-interview",
+        "published": "2025-12-11T21:48:49-05:00",
+        "source": "The Verge",
+        "summary": "Shortly after appeals court judges ruled against Apple's contempt appeal in a years-long antitrust dispute against the makers of Fortnite, I got to talk to Epic Games CEO Tim Sweeney in an interview. According to Sweeney, today's ruling \"completely shuts down\" Apple's App Store rules that allow it to collect \"junk fees.\" The three-judge Ninth [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/star-wars-fate-of-the-old-republic-announced-as-a-kotor-spiritual-successor/",
+        "title": "Star Wars: Fate of the Old Republic announced as a KOTOR spiritual successor",
+        "link": "https://arstechnica.com/gaming/2025/12/star-wars-fate-of-the-old-republic-announced-as-a-kotor-spiritual-successor/",
+        "published": "Fri, 12 Dec 2025 02:51:40 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Original <em>KOTOR</em> director Casey Hudson returns to Star Wars with new studio Arcanaut."
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/jonathan-blow-has-spent-the-past-decade-designing-1400-puzzles-for-you/",
+        "title": "Jonathan Blow has spent the past decade designing 1,400 puzzles for you",
+        "link": "https://arstechnica.com/gaming/2025/12/jonathan-blow-has-spent-the-past-decade-designing-1400-puzzles-for-you/",
+        "published": "Fri, 12 Dec 2025 01:50:08 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Preview: <em>Order of the Sinking Star</em> started small but became a \"combinatoric explosion.\""
+    },
+    {
+        "id": "https://www.engadget.com/gaming/exodus-is-delayed-to-early-2027-032610665.html?src=rss",
+        "title": "Exodus is delayed to early 2027",
+        "link": "https://www.engadget.com/gaming/exodus-is-delayed-to-early-2027-032610665.html?src=rss",
+        "published": "Fri, 12 Dec 2025 03:26:11 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div id=\"2d8891e86768497298a63736dca52e61\"></div>\n<p>So there's good news and bad news about the highly anticipated <em>Exodus</em> coming out of The Game Awards this year. The good news is that there's a fresh trailer showcasing more of the game. The bad news is that the game won't be out until early 2027. The game was originally announced <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/exodus-is-a-new-sci-fi-rpg-from-former-bioware-343-and-naughty-dog-developers-011433508.html\">two"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/lara-croft-will-return-in-tomb-raider-catalyst-and-a-new-remake-025859998.html?src=rss",
+        "title": "Lara Croft will return in Tomb Raider: Catalyst and a new remake",
+        "link": "https://www.engadget.com/gaming/lara-croft-will-return-in-tomb-raider-catalyst-and-a-new-remake-025859998.html?src=rss",
+        "published": "Fri, 12 Dec 2025 02:58:59 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The last mainline Tomb Raider game was 2018\u2019s <a class=\"link\" href=\"https://www.engadget.com/2018-04-27-shadow-of-the-tomb-raider-preview-gameplay.html\" target=\"_blank\"><em>Shadow of the Tomb Raider</em></a>, and after spending a few years in video game purgatory, Lara Croft is coming back in two new games. At The Game Awards 2025, Amazon Game Studios announced that <a class=\"link\" href=\"https://www.youtube.com/watch?v=N2yLZQFPSLo\" target=\"_blank\"><em>Tomb Raider: Legacy of Atlantis</em></a><"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/lego-batman-legacy-of-the-dark-knight-swoops-onto-pc-and-consoles-on-may-29-024729940.html?src=rss",
+        "title": "Lego Batman: Legacy of the Dark Knight swoops onto PC and consoles on May 29",
+        "link": "https://www.engadget.com/gaming/lego-batman-legacy-of-the-dark-knight-swoops-onto-pc-and-consoles-on-may-29-024729940.html?src=rss",
+        "published": "Fri, 12 Dec 2025 02:47:29 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div id=\"eae9f1a6a23d44b8be41187b933a4c92\"><div style=\"width: 100%; height: 0; padding-bottom: 56.25%;\"></div></div>\n<p>It didn't take too long for a game that a whole bunch of people are <a class=\"no-affiliate-link\" href=\"https://www.thegamebusiness.com/p/lego-batman-legacy-of-the-dark-knight\">excited about</a> to swoop into <em>Grand Theft Auto VI</em>'s old release week. Or maybe Rockstar had an idea of was what was coming and <a href=\"https://www.engadget.com/gaming/grand-theft-auto-vi-is-de"
+    },
+    {
+        "id": "https://gizmodo.com/star-wars-galactic-racer-announcement-trailer-game-awards-2026-2000698847",
+        "title": "\u2018Star Wars: Galactic Racer\u2019 Is Speeding Into Our Hearts",
+        "link": "https://gizmodo.com/star-wars-galactic-racer-announcement-trailer-game-awards-2026-2000698847",
+        "published": "Fri, 12 Dec 2025 03:41:40 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Star Wars Galactic Racer Sebulba\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/star-wars-galactic-racer-sebulba.jpg\" width=\"1920\" /><br /><br />Now this is podracing, among other things."
+    },
+    {
+        "id": "https://gizmodo.com/game-awards-2025-marvel-rivals-deadpool-release-date-2000698482",
+        "title": "Surprise! Deadpool Is Also Coming to \u2018Marvel Rivals\u2019",
+        "link": "https://gizmodo.com/game-awards-2025-marvel-rivals-deadpool-release-date-2000698482",
+        "published": "Fri, 12 Dec 2025 02:45:58 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Marvel Rivals Deadpool\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Marvel-Rivals-Deadpool.jpg\" width=\"1920\" /><br /><br />The merc with a mouth will be the next character to join Netease's Marvel comics shooter early next year."
+    },
+    {
+        "id": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-12",
+        "title": "NYT Pips hints, answers for December 12, 2025",
+        "link": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-12",
+        "published": "Fri, 12 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The New York Times' latest game, Pips, brings domino fun to your desktop. How to play Pips as well as hints in case you get stuck."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-12-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 12, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-12-2025",
+        "published": "Fri, 12 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-12-2025",
+        "title": "NYT Strands hints, answers for December 12, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-12-2025",
+        "published": "Fri, 12 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-12-2025",
+        "title": "Wordle today: Answer, hints for December 12, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-12-2025",
+        "published": "Fri, 12 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1637 on December 12 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://www.zdnet.com/article/hdmi-tricks-best-tv-performance/",
+        "title": "8 HDMI tricks I use to get the best performance from my TV - and most are free",
+        "link": "https://www.zdnet.com/article/hdmi-tricks-best-tv-performance/",
+        "published": "Fri, 12 Dec 2025 03:00:39 GMT",
+        "source": "Latest news",
+        "summary": "Think your TV setup is fine? These HDMI tricks can unlock performance and sound you didn't know you were missing."
     }
 ]
