📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9838,5 +9838,29 @@
         "published": "Fri, 12 Dec 2025 03:00:39 GMT",
         "source": "Latest news",
         "summary": "Think your TV setup is fine? These HDMI tricks can unlock performance and sound you didn't know you were missing."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/housemarques-saros-is-delayed-to-april-30-041813989.html?src=rss",
+        "title": "Housemarque's Saros is delayed to April 30",
+        "link": "https://www.engadget.com/gaming/housemarques-saros-is-delayed-to-april-30-041813989.html?src=rss",
+        "published": "Fri, 12 Dec 2025 04:18:13 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div id=\"a275d55467dd4663b4d67128e7a15c92\"></div>\n<p>PlayStation had <a href=\"https://x.com/PlayStation/status/1998407291754729536\"><ins>said</ins></a> on X that it would have news about Saros at The Game Awards, and unfortunately, fans excited for the new Housemarque project will need to wait a little longer to get their hands on it. The game has been delayed from its planned March release. But there's only a short time until the new date of April 30, and pre-orders are open now. Star Rahul Koh"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/playstation/4loop-is-a-co-op-shooter-from-the-creator-of-left-4-dead-and-jj-abrams-bad-robot-035835461.html?src=rss",
+        "title": "4:LOOP is a co-op shooter from the creator of Left 4 Dead and JJ Abrams' Bad Robot",
+        "link": "https://www.engadget.com/gaming/playstation/4loop-is-a-co-op-shooter-from-the-creator-of-left-4-dead-and-jj-abrams-bad-robot-035835461.html?src=rss",
+        "published": "Fri, 12 Dec 2025 03:58:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The next game from <em>Left 4 Dead</em> designer Mike Booth is putting a sci-fi spin on his last game's co-op action, <a href=\"https://www.youtube.com/watch?v=6-5ieEtmgTc\"><ins>based on a trailer</ins></a> Booth and producer JJ Abrams shared at The Game Awards 2025. The new game is called <em>4:LOOP</em>, and it's the first project entirely developed by <a href=\"https://www.engadget.com/2018-06-08-j-j-abrams-bad-robot-gaming-tencent.html\"><ins>Bad Robot Games</ins></a>, film production compan"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/star-wars-galactic-racer-is-a-podracing-game-set-for-2026-035508891.html?src=rss",
+        "title": "Star Wars: Galactic Racer is a podracing game set for 2026",
+        "link": "https://www.engadget.com/gaming/star-wars-galactic-racer-is-a-podracing-game-set-for-2026-035508891.html?src=rss",
+        "published": "Fri, 12 Dec 2025 03:55:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div id=\"d1f9ce82beee4a2180eea79a17c49b83\"><div style=\"width: 100%; height: 0; padding-bottom: 56.25%;\"></div></div>\n<p>Why have <a href=\"https://www.engadget.com/gaming/star-wars-fate-of-the-old-republic-is-a-new-action-rpg-from-the-director-of-mass-effect-and-kotor-012913046.html\">one Star Wars game announcement</a> at an edition of The Game Awards when you can have two? <em>Star Wars: Galactic Racer </em>is a podracing (and speeder racing) game from <a href=\"https://www.gamesindustry.biz/form"
     }
 ]
