📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9862,5 +9862,29 @@
         "published": "Fri, 12 Dec 2025 03:55:09 +0000",
         "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
         "summary": "<div id=\"d1f9ce82beee4a2180eea79a17c49b83\"><div style=\"width: 100%; height: 0; padding-bottom: 56.25%;\"></div></div>\n<p>Why have <a href=\"https://www.engadget.com/gaming/star-wars-fate-of-the-old-republic-is-a-new-action-rpg-from-the-director-of-mass-effect-and-kotor-012913046.html\">one Star Wars game announcement</a> at an edition of The Game Awards when you can have two? <em>Star Wars: Galactic Racer </em>is a podracing (and speeder racing) game from <a href=\"https://www.gamesindustry.biz/form"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/everything-announced-and-all-the-winners-at-the-game-awards-2025-044101761.html?src=rss",
+        "title": "Everything announced and all the winners at The Game Awards 2025",
+        "link": "https://www.engadget.com/gaming/everything-announced-and-all-the-winners-at-the-game-awards-2025-044101761.html?src=rss",
+        "published": "Fri, 12 Dec 2025 04:41:01 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>This year at The Game Awards, if your game wasn\u2019t melodramatic, mechanically innovative, beautifully presented and aggressively French, it didn\u2019t stand a chance. The Game Awards 2025 wrapped up on the evening of Thursday, December 11 with a record-breaking showing by <em>Clair Obscur: Expedition 33</em> from Sandfall Interactive. The game received the most nominations and wins in the show\u2019s 12-year history.</p><p>But, we know that\u2019s not really why you\u2019re here. Between the award presentations "
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-12-2025",
+        "title": "Hurdle hints and answers for December 12, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-12-2025",
+        "published": "Fri, 12 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-12",
+        "title": "Moon phase today: What the moon will look like on December 12",
+        "link": "https://mashable.com/article/moon-phase-today-dec-12",
+        "published": "Fri, 12 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 12, 2025 as well as when the next full moon is expected."
     }
 ]
