📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9886,5 +9886,29 @@
         "published": "Fri, 12 Dec 2025 05:00:00 +0000",
         "source": "Mashable",
         "summary": "See the moon phase expected for December 12, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://www.wired.com/story/bh-photo-coupon/",
+        "title": "B&H Photo Promo Codes and Deals for December 2025",
+        "link": "https://www.wired.com/story/bh-photo-coupon/",
+        "published": "Fri, 12 Dec 2025 06:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Enjoy top deals on cameras, computers, and tech essentials at B&amp;H Photo."
+    },
+    {
+        "id": "https://www.wired.com/story/factor-promo-code/",
+        "title": "Factor Promo Code: Up to $130 Off Meal Prep",
+        "link": "https://www.wired.com/story/factor-promo-code/",
+        "published": "Fri, 12 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Make meal prep easier for any dietary need while enjoying great savings with our hand-picked Factor discount codes this December."
+    },
+    {
+        "id": "https://www.washingtonpost.com/lifestyle/2025/12/05/karl-bushby-walk-around-world/",
+        "title": "He set out to walk around the world. After 27 years, his quest is nearly over",
+        "link": "https://www.washingtonpost.com/lifestyle/2025/12/05/karl-bushby-walk-around-world/",
+        "published": "Sun, 07 Dec 2025 16:26:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46182874\">Comments</a>"
     }
 ]
