📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9910,5 +9910,21 @@
         "published": "Sun, 07 Dec 2025 16:26:45 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46182874\">Comments</a>"
+    },
+    {
+        "id": "https://lucassifoni.info/blog/miniscope-tiny-telescope/",
+        "title": "The tiniest yet real telescope I've built",
+        "link": "https://lucassifoni.info/blog/miniscope-tiny-telescope/",
+        "published": "Fri, 12 Dec 2025 07:35:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46241763\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/copilot-usage-analysis-2am-philosophy-questions/",
+        "title": "Microsoft\u2019s Copilot usage analysis exposes the 2 am philosophy question phenomenon",
+        "link": "https://www.artificialintelligence-news.com/news/copilot-usage-analysis-2am-philosophy-questions/",
+        "published": "Fri, 12 Dec 2025 08:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>F. Scott Fitzgerald once observed that &#8220;in a real dark night of the soul, it is always three o&#8217;clock in the morning.&#8221; Microsoft&#8217;s latest Copilot&#160;usage analysis&#160;suggests this nocturnal tendency toward existential contemplation persists in the AI age\u2014with religion and philosophy conversations rising through the rankings during early morning hours. The Microsoft AI (MAI) research team [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com"
     }
 ]
